# qr-certificate-validator

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  KNOWN_ISSUES.md  LEGAL_DISCLAIMER.md  LICENSE  Makefile  README.md  SECURITY.md  config.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  security_scan.py  setup.py
.amazonq/rules/memory-bank/: guidelines.md  product.md  structure.md  tech.md
.github/: CODE_OF_CONDUCT.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
config/: .env.example
core/: pdf_processor.py  qr_detector.py  validator.py  web_scraper.py
data/: README.md
data/examples/: README.md
data/examples/sample_certificates/: INSTRUCCIONES.txt
data/production/: .gitkeep
data/test/: .gitkeep
docs/: CLOUD_DEPLOYMENT.md  PERFORMANCE_MONITORING.md  README.md  project_summary_for_gcp.md
docs/images/: README.md
docs/security/: PDF_SECURITY_ANALYSIS.md  SECURITY_IMPLEMENTATION_STATUS.md  SECURITY_IMPROVEMENTS.md
docs/troubleshooting/: TROUBLESHOOTING.md
scripts/: README.md  cost_calculator.py  install_dependencies.sh  monitor_demo.py  security_check.py  setup_dev_env.sh  setup_test_data.sh
tests/: README.md  test_security.py
tests/unit/: test_security.py
utils/: README.md  cli_handler.py  cloud_cost_analyzer.py  logger.py  pdf_security_analyzer.py  performance_decorator.py  progress_bar.py  resource_monitor.py  security_validator.py  stats_handler.py  structured_logger.py
